# STE

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  _version.py  api.py  github-recovery-codes.txt  inst.py  pyproject.toml  requirement.txt  requirements.txt  setup.sh  test.py
.github/workflows/: ci.yml  deploy.yml  docs.yml
src/: main.py
src/docs/source/: conf.py  index.rst  modules.rst  ste.rst
src/ste/: ai_model_api.py  api.py  inst.py
src/tests/: test.py  test_inst.py  test_util.py
src/utils/: errors.py  log_util.py  util.py  util_models.py
tests/: test.py  test_mask.py
